[gd_scene load_steps=18 format=3 uid="uid://nktrlm6a8k8l"]

[ext_resource type="Script" path="res://Scripts/xantarian_heavy_support.gd" id="1_sygy0"]
[ext_resource type="Texture2D" uid="uid://dkywxyw07vu2r" path="res://Assets/Game Assets/Enemy/Heavy Support Craft (1).png" id="2_pqgra"]
[ext_resource type="Texture2D" uid="uid://dly3d6hhac0hj" path="res://Assets/Game Assets/Enemy/Enemy Thruster.png" id="3_k7ir0"]
[ext_resource type="Texture2D" uid="uid://bocc80r7iyx3x" path="res://Assets/Game Assets/Explosion Asset.png" id="3_o8hlh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ltpi"]
atlas = ExtResource("2_pqgra")
region = Rect2(0, 0, 160, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_f10pp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ltpi")
}],
"loop": true,
"name": &"Ship",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ul0a1"]
atlas = ExtResource("3_o8hlh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwnmr"]
atlas = ExtResource("3_o8hlh")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6sb6"]
atlas = ExtResource("3_o8hlh")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n587c"]
atlas = ExtResource("3_o8hlh")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ko5o"]
atlas = ExtResource("3_o8hlh")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg2q5"]
atlas = ExtResource("3_o8hlh")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmw5d"]
atlas = ExtResource("3_o8hlh")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdeed"]
atlas = ExtResource("3_o8hlh")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1ruw"]
atlas = ExtResource("3_o8hlh")
region = Rect2(200, 200, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_gxqp5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul0a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwnmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6sb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n587c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ko5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg2q5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmw5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdeed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1ruw")
}],
"loop": true,
"name": &"Explosion",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3yfbn"]
radius = 55.0
height = 184.0

[node name="Xantarian Heavy Support Craft" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_sygy0")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(3.8147e-06, 0)
scale = Vector2(1.02, 1.02)
sprite_frames = SubResource("SpriteFrames_f10pp")
animation = &"Ship"
autoplay = "Ship"

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(3.8147e-06, 0)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_gxqp5")
animation = &"Explosion"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_3yfbn")

[node name="EnemyThrusters" type="Node2D" parent="."]

[node name="EnemyThruster2" type="Sprite2D" parent="EnemyThrusters"]
position = Vector2(16, -118)
scale = Vector2(0.5625, 0.5625)
texture = ExtResource("3_k7ir0")

[node name="EnemyThruster3" type="Sprite2D" parent="EnemyThrusters"]
position = Vector2(-16, -118)
scale = Vector2(0.5625, 0.5625)
texture = ExtResource("3_k7ir0")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9.53674e-07, -96)
scale = Vector2(2.2, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
